# GameClub

./: CMakeLists.txt  README.md
src/: main.cpp
src/event/: EventAnalyzer.cpp  EventAnalyzer.h
src/event/event/: Event.cpp  Event.h  EventIdE.h
src/event/сomparators/: ClientNameComparator.h  TmComparator.h
src/exceptions/fileFormat/: FileFormatException.cpp  FileFormatException.h
src/exceptions/gameClub/: GameClubException.cpp  GameClubException.h
src/exceptions/gameClub/iCanWaitNoLonger/: ICanWaitNoLongerException.cpp  ICanWaitNoLongerException.h
src/exceptions/gameClub/notOpenYet/: NotOpenYetException.cpp  NotOpenYetException.h
src/exceptions/gameClub/placeIsBusy/: PlaceIsBusyException.cpp  PlaceIsBusyException.h
src/exceptions/gameClub/soBigQueue/: SoBigQueueException.cpp  SoBigQueueException.h
src/exceptions/gameClub/youShallNotPass/: YouShallNotPassException.cpp  YouShallNotPassException.h
src/exceptions/gameClub/сlientUnknown/: ClientUnknownException.cpp  ClientUnknownException.h
src/exceptions/parsing/: ParsingFileException.cpp  ParsingFileException.h
src/gameClub/: GameClub.cpp  GameClub.h  GameClubCreator.cpp  GameClubCreator.h  GameClubParamsT.h
src/inputParser/: InputParser.cpp  InputParser.h
src/resultPrinter/: ResultPrinter.cpp  ResultPrinter.h
src/table/: Table.cpp  Table.h
src/timeFixer/: TimeFixer.cpp  TimeFixer.h
src/сomparators/: TmComparator.h
